use udp to broadcast my name to others

--- a/public/files.html
+++ b/public/files.html
@@ -15,7 +15,7 @@
 
     <div class="container">
         <div class="row">
-            <span>昵称:{{me.nickname}}</span>
+            <span>昵称:{{me}}</span>
         </div>
         <hr/>
 
